--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,9 +8,9 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #00163f;
+  --bg-color: #ffffff;
   --bg-color-transparent: #00163f80;
-  --font-color: #ffffff;
+  --font-color: #90378c;
   --btn-bg-color: #ffffff;
   --accent-color: #be7efe;
   --header-shadow: var(--accent-color) 0px 0px 5px;
